fixed scrolling; messed with overflow and proportions

--- a/resources/public/static/nzfe.css
+++ b/resources/public/static/nzfe.css
@@ -1,9 +1,31 @@
 /* scroller */
-.scrollable {
-  height: 400px;
-  overflow-y: auto;
+.main-view {
+  height: 100%;
+  overflow: hidden;
 }
 
+.hero {
+  max-height: 10vh;
+}
+
+.tabs {
+  max-height: 5vh;
+}
+
+.time-count {
+  font-size: small;
+}
+
+.columns {
+  position: relative;
+  max-height: 85vh;
+  overflow: hidden;
+  margin-right: 3px;
+}
+
+.scrollable {
+  overflow-y: auto;
+}
 /* tooltip */
 
 .tooltip {
@@ -30,79 +52,33 @@
   visibility: visible;
 }
 
-/* throbber */
-.lds-grid {
-  display: inline-block;
-  position: relative;
-  width: 80px;
-  height: 80px;
+.card {
+  border: 3px double black;
+  margin: 2px;
 }
-.lds-grid div {
-  position: absolute;
-  width: 16px;
-  height: 16px;
-  border-radius: 50%;
-  background: #fff;
-  animation: lds-grid 1.2s linear infinite;
-}
-.lds-grid div:nth-child(1) {
-  top: 8px;
-  left: 8px;
-  animation-delay: 0s;
-}
-.lds-grid div:nth-child(2) {
-  top: 8px;
-  left: 32px;
-  animation-delay: -0.4s;
-}
-.lds-grid div:nth-child(3) {
-  top: 8px;
-  left: 56px;
-  animation-delay: -0.8s;
-}
-.lds-grid div:nth-child(4) {
-  top: 32px;
-  left: 8px;
-  animation-delay: -0.4s;
-}
-.lds-grid div:nth-child(5) {
-  top: 32px;
-  left: 32px;
-  animation-delay: -0.8s;
-}
-.lds-grid div:nth-child(6) {
-  top: 32px;
-  left: 56px;
-  animation-delay: -1.2s;
-}
-.lds-grid div:nth-child(7) {
-  top: 56px;
-  left: 8px;
-  animation-delay: -0.8s;
-}
-.lds-grid div:nth-child(8) {
-  top: 56px;
-  left: 32px;
-  animation-delay: -1.2s;
-}
-.lds-grid div:nth-child(9) {
-  top: 56px;
-  left: 56px;
-  animation-delay: -1.6s;
-}
-@keyframes lds-grid {
-  0%,
-  100% {
-    opacity: 1;
-  }
-  50% {
-    opacity: 0.5;
-  }
+
+.card-content {
+  border: 1px dotted red;
 }
 
 /* hovering */
 #latest {
   background-color: rgb(197, 78, 23);
+}
+
+.cat-content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* padding-left: 1px;
+  font-size: medium; */
+}
+
+.topic-content {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  /* border-radius: 5px;
+  margin-left: 1px;
+  padding-left: 2px; */
 }
 
 #latest:hover,
